dev/k8s/archivista/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: archivista
  name:  archivista
  labels:
    app: archivista
spec:
  selector:
    matchLabels:
      app: archivista
  template:
    metadata:
      labels:
        app: archivista
    spec:
      containers:
        - name: archivista
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          image: registry.gitlab.com/testifysec/judge-platform/archivista
          ports:
            - containerPort: 8082
              protocol: TCP
