dev/k8s/archivista/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: archivista
  name: archivista
  labels:
    app: archivista
spec:
  ports:
    - port: 8082
      protocol: TCP
  selector:
    app: archivista
