dev/k8s/archivista/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: archivista
  name: archivista
  annotations:
    cert-manager.io/cluster-issuer: tls-ca-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - archivista.testifysec.localhost
      secretName: archivista-tls
  rules:
    - host: archivista.testifysec.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archivista
                port:
                  number: 8082
